--- a/chattersum/logging.conf
+++ b/chattersum/logging.conf
@@ -2,7 +2,7 @@
 keys=root,chattersum,streamr,ngramr,cleanr
 
 [handlers]
-keys=consoleHandler,hand02
+keys=consoleHandler,hand02,hand03
 
 [formatters]
 keys=simpleFormatter
@@ -13,25 +13,25 @@ handlers=consoleHandler
 
 [logger_chattersum]
 level=DEBUG
-handlers=hand02
+handlers=hand03
 qualname=chattersum
 propagate=0
 
 [logger_streamr]
 level=DEBUG
-handlers=hand02
+handlers=hand03
 qualname=streamr
 propagate=0
 
 [logger_ngramr]
 level=DEBUG
-handlers=hand02
+handlers=hand03
 qualname=ngramr
 propagate=0
 
 [logger_cleanr]
 level=DEBUG
-handlers=hand02
+handlers=hand03
 qualname=cleanr
 propagate=0
 
@@ -40,6 +40,13 @@ class=FileHandler
 level=DEBUG
 formatter=simpleFormatter
 args=('/var/log/chattersum.log', 'a')
+
+[handler_hand03]
+class=handlers.RotatingFileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=('logs/chattersum.log', 'a', 10000, 5)
+
 
 [handler_consoleHandler]
 class=StreamHandler
