--- a/chattersum/logging.conf
+++ b/chattersum/logging.conf
@@ -45,7 +45,7 @@ args=('/var/log/chattersum.log', 'a')
 class=handlers.RotatingFileHandler
 level=DEBUG
 formatter=simpleFormatter
-args=('logs/chattersum.log', 'a', 10000, 5)
+args=('logs/chattersum.log', 'a', 5000000, 5)
 
 
 [handler_consoleHandler]
