--- a/logging.conf
+++ b/logging.conf
@@ -2,7 +2,7 @@
 keys=root,chattersum,streamr,ngramr,cleanr
 
 [handlers]
-keys=consoleHandler,hand02,hand03
+keys=consoleHandler,hand03
 
 [formatters]
 keys=simpleFormatter
@@ -35,18 +35,11 @@ handlers=hand03
 qualname=cleanr
 propagate=0
 
-[handler_hand02]
-class=FileHandler
-level=DEBUG
-formatter=simpleFormatter
-args=('/var/log/chattersum.log', 'a')
-
 [handler_hand03]
 class=handlers.RotatingFileHandler
 level=DEBUG
 formatter=simpleFormatter
 args=('logs/chattersum.log', 'a', 5000000, 5)
-
 
 [handler_consoleHandler]
 class=StreamHandler
