hold on, this could get rough

--- a/logging.conf
+++ b/logging.conf
@@ -2,7 +2,7 @@
 keys=root,chattersum,streamr,ngramr,cleanr
 
 [handlers]
-keys=consoleHandler,hand03
+keys=consoleHandler,back,front,middle
 
 [formatters]
 keys=simpleFormatter
@@ -13,33 +13,45 @@ handlers=consoleHandler
 
 [logger_chattersum]
 level=DEBUG
-handlers=hand03
+handlers=back
 qualname=chattersum
 propagate=0
 
 [logger_streamr]
 level=DEBUG
-handlers=hand03
+handlers=back
 qualname=streamr
 propagate=0
 
 [logger_ngramr]
 level=DEBUG
-handlers=hand03
+handlers=back
 qualname=ngramr
 propagate=0
 
 [logger_cleanr]
 level=DEBUG
-handlers=hand03
+handlers=back
 qualname=cleanr
 propagate=0
 
-[handler_hand03]
+[handler_back]
 class=handlers.RotatingFileHandler
 level=DEBUG
 formatter=simpleFormatter
-args=('logs/chattersum.log', 'a', 5000000, 5)
+args=('logs/back.log', 'a', 5000000, 3)
+
+[handler_middle]
+class=handlers.RotatingFileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=('logs/middle.log', 'a', 5000000, 3)
+
+[handler_front]
+class=handlers.RotatingFileHandler
+level=DEBUG
+formatter=simpleFormatter
+args=('logs/front.log', 'a', 5000000, 3)
 
 [handler_consoleHandler]
 class=StreamHandler
