--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+boto==2.38.0
 cffi==1.0.3
 cryptography==0.9
 enum34==1.0.4
@@ -8,6 +9,7 @@ oauthlib==0.7.2
 psycopg2==2.6
 pyasn1==0.1.7
 pycparser==2.13
+pymongo==3.0.2
 pyOpenSSL==0.15.1
 requests==2.7.0
 requests-oauthlib==0.5.0
