--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,29 @@
-Flask==0.10.1
-Flask-Login==0.2.11
-Flask-SQLAlchemy==2.0
-Flask-WTF==0.11
-Jinja2==2.7.3
-MarkupSafe==0.23
-SQLAlchemy==1.0.5
-WTForms==2.0.2
-Werkzeug==0.10.4
-argparse==1.2.1
 boto==2.38.0
 cffi==1.0.3
 cryptography==0.9
 enum34==1.0.4
+Flask==0.10.1
+Flask-SocketIO==0.6.0
+gevent==1.0.2
+gevent-socketio==0.3.6
+gevent-websocket==0.9.5
+greenlet==0.4.7
 idna==2.0
 ipaddress==1.0.7
 itsdangerous==0.24
+Jinja2==2.7.3
+MarkupSafe==0.23
 ndg-httpsclient==0.4.0
 oauthlib==0.7.2
 psycopg2==2.6
-pyOpenSSL==0.15.1
 pyasn1==0.1.7
 pycparser==2.13
 pymongo==3.0.2
+pyOpenSSL==0.15.1
 requests==2.7.0
 requests-oauthlib==0.5.0
 six==1.9.0
 tweepy==3.3.0
+Werkzeug==0.10.4
 wheel==0.24.0
-wsgiref==0.1.2
 zc.lockfile==1.1.0
